updated server api
