# server/src/fridge.js
@@ -3,8 +3,8 @@ const router = express.Router();
 
 const db = require("./database/database");
 
-router.get("/items", async (req, res) => {
-  const userId = req.headers.userid;
+router.get("/items/:userId", async (req, res) => {
+  const { userId } = req.params;
   if (!userId) {
     return res.status(400).send("User id not provided in request header");
   }
@@ -12,21 +12,22 @@ router.get("/items", async (req, res) => {
   if (!user) {
     return res.status(404).send("User not found or unauthorized");
   }
-  res.send(user);
+  res.send(user.items);
 });
 
-router.post("/items", async (req, res) => {
-  const userId = req.headers.userid;
+router.post("/items/:userId", async (req, res) => {
+  const { userId } = req.params;
   if (!userId) {
     return res.status(400).send("User id not provided in request header");
   }
-  const user = await db.getUserById(userId);
+  let user = await db.getUserById(userId);
   if (!user) {
     return res.status(404).send("User not found or unauthorized");
   }
   const { item_name, item_id, item_image } = req.body;
-  const item = db.addItem(userId, item_name, item_id, item_image);
-  res.send(item);
+  db.addItem(userId, item_name, item_id, item_image);
+  user = await db.getUserById(userId);
+  res.send(user.items);
 });
 
 // router.delete()
